project2/tests/reject/0-for-loops-bad.cc
int main() {
    for(a = 5; x++; b = 3)
        int a = 3;
}